--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,57 +1,63 @@
-main{
-    max-width: 1440px;
+main {
     margin: auto;
     grid-gap: 3rem;
     display: grid;
     gap: 3rem;
-    grid-template-areas: "sidebar main anchors";
-    grid-template-columns: minmax(0,15rem) minmax(0,2.5fr) minmax(0,15rem);
+    /* grid-template-areas: "sidebar main anchors"; */
+    grid-template-columns: minmax(0, 15rem) minmax(0, 2.5fr) minmax(0, 15rem);
     padding-left: 1rem;
     padding-right: 1rem;
     margin-bottom: 1%;
 }
+
 .bar {
     background-color: #f9f9fb;
-    padding:15px;
+    padding: 15px;
     border-top: solid 1px #cdcdcd;
     border-bottom: solid 1px #cdcdcd;
 }
-nav{
+
+nav {
     border-right: 1px solid #cdcdcd;
 }
+
 ul {
-    list-style: none; 
-    }
-a { 
-        color:blue; 
-        text-decoration: none;
+    list-style: none;
 }
-.menu li{
+
+a {
+    color: blue;
+    text-decoration: none;
+}
+
+.menu li {
     margin-top: 10%;
 }
-p{
+
+p {
     text-align: justify;
 }
-span{
+
+span {
     font-weight: bolder;
 }
 
-table{
+table {
     margin-top: 50px;
     margin-bottom: 50px;
 }
 
-thead{
+thead {
     background-color: black;
     color: white;
     top: 0;
 }
 
-table tbody tr:nth-child(even){
+table tbody tr:nth-child(even) {
     background-color: lightgray;
 }
 
-.formulario label{
+.formulario label {
     display: inline-block;
     width: 100px;
     text-align: right;
@@ -59,17 +65,17 @@ table tbody tr:nth-child(even){
     margin-bottom: 10px;
 }
 
-.formulario .textarea{
+.formulario .textarea {
     display: flex;
     margin-top: 5px;
     margin-bottom: 10px;
 }
 
-.botao{
+.botao {
     display: flex;
     gap: 5px;
 }
 
-.botao #botao1{
+.botao #botao1 {
     margin-left: 100px;
 }
