--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,9 +1,25 @@
-
 footer {
     display: flex;
-    border-top: 1px solid #cdcdcd;
     justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    border-top: 1px solid #cdcdcd;
 }
-.redes-sociais img{
-    width: 4%;
+
+.informacoes,
+.redes-sociais {
+    flex: 1 1 100%;
+    margin: 10px;
+}
+
+.informacoes ul,
+.redes-sociais ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+
+.redes-sociais img {
+    width: 40px;
 }
